ja/reference/1.0.2/commands/table-remove/index.md
---
title: table_remove
layout: en
---

{% comment %}
##############################################
  THIS FILE IS AUTOMATICALLY GENERATED FROM
  "_po/ja/reference/1.0.2/commands/table-remove/index.po"
  DO NOT EDIT THIS FILE MANUALLY!
##############################################
{% endcomment %}


* TOC
{:toc}

## 概要 {#abstract}

`table_remove` は、既存のテーブルを1つ削除します。

このコマンドは[Groonga の `table_remove` コマンド](http://groonga.org/ja/docs/reference/commands/table_remove.html)と互換性があります。

形式
: Request-Response型。コマンドに対しては必ず対応するレスポンスが返されます。

リクエストの `type`
: `table_remove`

リクエストの `body`
: パラメータのハッシュ。

レスポンスの `type`
: `table_remove.result`

## パラメータの構文 {#syntax}

    {
      "name" : "<テーブル名>"
    }

## パラメータの詳細 {#parameters}

唯一のパラメータとなる `name` は省略不可能です。

すべてのパラメータは[Groonga の `table_remove` コマンドの引数](http://groonga.org/ja/docs/reference/commands/table_remove.html#parameters)と共通です。詳細はGroongaのコマンドリファレンスを参照して下さい。

## レスポンス {#response}

このコマンドは、レスポンスの `body` としてコマンドの実行結果に関する情報を格納した配列を返却します。

    [
      [
        <Groongaのステータスコード>,
        <開始時刻>,
        <処理に要した時間>
      ],
      <テーブルが削除されたかどうか>
    ]

このコマンドはレスポンスの `statusCode` として常に `200` を返します。これは、Groonga互換コマンドのエラー情報はGroongaのそれと同じ形で処理される必要があるためです。

レスポンスの `body` の詳細：

ステータスコード
: コマンドが正常に受け付けられたかどうかを示す整数値です。以下のいずれかの値をとります。
  
   * `0` (`Droonga::GroongaHandler::Status::SUCCESS`) : 正常に処理された。.
   * `-22` (`Droonga::GroongaHandler::Status::INVALID_ARGUMENT`) : 引数が不正である。

開始時刻
: 処理を開始した時刻を示す数値（UNIX秒）。

処理に要した時間
: 処理を開始してから完了までの間にかかった時間を示す数値。

テーブルが削除されたかどうか
: テーブルが削除されたかどうかを示す真偽値です。以下のいずれかの値をとります。
  
   * `true`：テーブルを削除した。
   * `false`：テーブルを削除しなかった。
